<resources>
    <string name="app_name">CalendarApp</string>
    <string name="back"><![CDATA[<<]]></string>
    <string name="forward"><![CDATA[>>]]></string>
    <string name="day_number">1</string>
    <string name="placeholder">placehold!</string>
    <string name="day_sunday">SUN</string>
    <string name="day_monday">MON</string>
    <string name="day_tuesday">TUE</string>
    <string name="day_wednesday">WED</string>
    <string name="day_thursday">THU</string>
    <string name="day_friday">FRI</string>
    <string name="day_saturday">SAT</string>
    <string name="add_new_event">Add New Event</string>
    <string name="event_name_title">Name:</string>
    <string name="date_title">Date:</string>
    <string name="time_title">Time:</string>
    <string name="save_event">SAVE EVENT</string>
    <string name="name_of_event">Name of Event</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_event_title_dialog">NEW EVENT</string>
    <string name="add">Add</string>
    <string name="name">NAME</string>
    <string name="cancel">Cancel</string>
    <string name="date">DATE</string>
    <string name="time">TIME</string>
    <string name="tag">TAG</string>
    <string name="info">Info</string>
    <string name="classification">Classification</string>
    <string name="save">Save</string>
    <string name="major">Major</string>
    <string name="email">E-Mail</string>
    <string name="full_name">Full Name</string>
    <string name="tutors_header">Tutors and Contacts</string>
    <string name="abrv_month_placeholder">SEP</string>
    <string name="year_placeholder">2020</string>
    <string name="day_of_month_placeholder">31</string>
    <string name="no_events_for_today">No events for today!</string>
</resources>