<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EventEditActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/event_name_title"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/event_name_ET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textAlignment="center"
        android:ems="10"
        android:inputType="text"
        android:autofillHints="name"
        android:hint="@string/name_of_event"
        />

    <TextView
        android:id="@+id/event_date_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/date_title"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/event_time_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/time_title"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/save_event_BT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/save_event"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@null"
        android:layout_gravity="center"
        />

</LinearLayout>