<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/theme_background"
    tools:context=".WeekView_Fragment">
<LinearLayout
    android:id="@+id/ll_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/theme_primary"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <Button
        android:id="@+id/back2_month_view_BT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        android:textColor="@color/theme_secondary"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@color/transparent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/theme_primary">

        <Button
            android:id="@+id/prev_week_BT"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/back"
            android:textColor="@color/theme_secondary"
            android:textStyle="bold"
            android:textSize="30sp"
            android:background="@null"
            />

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/year_header_TV"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/placeholder"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                />
            <TextView
                android:id="@+id/month_header_TV"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/placeholder"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/white"
                />
        </LinearLayout>

        <Button
            android:id="@+id/next_week_BT"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/forward"
            android:textColor="@color/theme_secondary"
            android:textStyle="bold"
            android:textSize="30sp"
            android:background="@null"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="6dp"
        android:background="@color/theme_primary"
        android:orientation="horizontal">

        <TextView
            style="@style/day_title_text"
            android:text="@string/day_sunday"
            />
        <TextView
            style="@style/day_title_text"
            android:text="@string/day_monday"
            />
        <TextView
            style="@style/day_title_text"
            android:text="@string/day_tuesday"
            />
        <TextView
            style="@style/day_title_text"
            android:text="@string/day_wednesday"
            />
        <TextView
            style="@style/day_title_text"
            android:text="@string/day_thursday"
            />
        <TextView
            style="@style/day_title_text"
            android:text="@string/day_friday"
            />
        <TextView
            style="@style/day_title_text"
            android:text="@string/day_saturday"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_primary_accent1"
        android:paddingVertical="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_profile" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendar_RV"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:background="@color/theme_background"
        />

    <Button
        android:id="@+id/add_event_BT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="10dp"
        android:text="@string/placeholder"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@null"
        />



</LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/event_list_RV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@color/theme_background"
        app:layout_constraintTop_toBottomOf="@id/ll_header"
        />
    <ImageView
        android:id="@+id/no_event_wview_IV"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="20dp"
        android:src="@drawable/baseline_adb_24"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        app:layout_constraintTop_toBottomOf="@id/ll_header"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible"
        android:contentDescription="@string/placeholder" />
    <TextView
        android:id="@+id/no_event_wview_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_events_for_today"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/theme_background_accent2"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/no_event_wview_IV"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible"
        />

</androidx.constraintlayout.widget.ConstraintLayout>