<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_background_accent2">

    <TableRow
        android:background="@color/theme_primary"
        android:layout_marginBottom="20dp">
        <TextView
            android:text="@string/add_event_title_dialog"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />
    </TableRow>

    <TableRow
        android:layout_marginVertical="10dp">
        <TextView
            android:text="@string/name"
            android:textColor="@color/theme_secondary_accent2"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_marginStart="30dp"
            android:layout_weight="0"
            />
        <EditText
            android:id="@+id/new_event_name_ET"
            android:background="@color/theme_background"
            android:paddingVertical="10dp"
            android:layout_weight="3"
            android:layout_marginEnd="20dp"
            android:autofillHints="name"
            android:hint="@string/name_of_event"
            android:paddingHorizontal="10dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textColorHint="@color/theme_secondary"
            android:inputType="text"
            />
    </TableRow>

    <TableRow
        android:layout_marginVertical="10dp">
        <TextView
            android:text="@string/date"
            android:textColor="@color/theme_secondary_accent2"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_marginStart="30dp"
            android:layout_weight="0"
            />
        <!--https://stackoverflow.com/questions/8619576/android-drawing-a-button-as-a-spinner-->
        <Button
            android:id="@+id/new_event_date_BT"
            android:background="@color/theme_background"
            android:layout_weight="3"
            android:layout_marginEnd="20dp"
            android:paddingHorizontal="10dp"
            android:text="MM DD YYYY"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:textColor="@color/white"
            />
    </TableRow>

    <TableRow
        android:layout_marginVertical="10dp">
        <TextView
            android:text="@string/time"
            android:textColor="@color/theme_secondary_accent2"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_marginStart="30dp"
            android:layout_weight="0"
            />
        <Button
            android:id="@+id/new_event_time_BT"
            android:background="@color/theme_background"
            android:layout_weight="3"
            android:layout_marginEnd="20dp"
            android:paddingHorizontal="10dp"
            android:text="HH:MM AA"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:textColor="@color/white"
            />
    </TableRow>

    <TableRow
        android:layout_marginVertical="10dp">
        <TextView
            android:text="@string/tag"
            android:textColor="@color/theme_secondary_accent2"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_marginStart="30dp"
            android:layout_weight="0"
            />

        <LinearLayout
            android:layout_weight="3"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:paddingHorizontal="10dp"
            android:text="@string/placeholder"
            android:textSize="20sp"
            android:orientation="horizontal">
            <Button
                style="@style/choose_tag_color"
                android:background="@color/white"
                android:id="@+id/choose_color_1_BT"
                />
            <Button
                style="@style/choose_tag_color"
                android:background="@color/white"
                android:id="@+id/choose_color_2_BT"
                />
            <Button
                style="@style/choose_tag_color"
                android:background="@color/white"
                android:id="@+id/choose_color_3_BT"
                />
            <Button
                style="@style/choose_tag_color"
                android:background="@color/white"
                android:id="@+id/choose_color_4_BT"
                />

        </LinearLayout>

    </TableRow>

    <TableRow
        android:layout_marginVertical="10dp">
        <Button
            android:id="@+id/cancel_new_event_BT"
            android:background="@color/theme_primary"
            android:text="@string/cancel"
            android:textSize="27sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="15dp"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/add_new_event_BT"
            android:background="@color/theme_primary"
            android:text="@string/add"
            android:textSize="27sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="15dp"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle" />
    </TableRow>

</TableLayout>