<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_background"
    tools:context=".Profile_Fragment">

    <TextView
        android:id="@+id/header_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_primary"
        android:paddingVertical="13dp"
        android:paddingStart="20dp"
        android:text="Profile"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_primary_accent1"
        android:paddingVertical="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_profile" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView3"
        android:src="@drawable/profile_base"
        android:layout_width="189dp"
        android:layout_height="189dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="121dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/placeholder"
        style="@style/Style.App.circleImageView"
        app:strokeWidth="5dp"
        app:strokeColor="@color/theme_secondary"
        />

    <LinearLayout
        android:layout_width="295dp"
        android:layout_height="382dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="60dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <EditText
            android:id="@+id/uf_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:autofillHints="name"
            android:hint="@string/full_name"
            android:textColorHint="@color/theme_secondary"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:background="@color/theme_background_accent1"
            android:inputType="text"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/uf_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:background="@color/theme_background_accent1"
            android:autofillHints="name"
            android:hint="@string/email"
            android:textColorHint="@color/theme_secondary"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:inputType="textEmailAddress"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/uf_major"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:background="@color/theme_background_accent1"
            android:autofillHints="name"
            android:hint="@string/major"
            android:textColorHint="@color/theme_secondary"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:inputType="text"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/uf_classification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:background="@color/theme_background_accent1"
            android:autofillHints="name"
            android:hint="@string/classification"
            android:textColorHint="@color/theme_secondary"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:inputType="text"
            android:textSize="30sp" />

        <Button
            android:layout_marginTop="30dp"
            android:id="@+id/save_button"
            android:background="@color/theme_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:elevation="2dp"
            android:text="@string/save" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>